//
// Created by ferra on 22/10/2024.
//

#ifndef FOLDER_H
#define FOLDER_H
#include "MediaItem.h"

class Folder : public MediaItem {
protected:
public:
private:
};



#endif //FOLDER_H
