//
// Created by ferra on 22/10/2024.
//

#ifndef PLAYLIST_H
#define PLAYLIST_H
#include <SongContainer.h>

class Playlist : public SongContainer {
protected:
public:
private:
};



#endif //PLAYLIST_H
